--- a/CarAccessories/CarNews/templates/news/blog_single.html
+++ b/CarAccessories/CarNews/templates/news/blog_single.html
@@ -126,7 +126,7 @@
         var self = this;
         $.ajax(
             {
-                url:'http://10.10.14.182/news/newsapi/',
+                url:'/news/newsapi/',
                 type:'GET',
                 data:{
                     'format': 'json',
