--- a/CarAccessories/CarPartsShop/templates/shop/shop_base.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_base.html
@@ -146,8 +146,10 @@
                                                         <span class="price price-dark">
 
                                                                 <ins><span v-text="shop.price"> 0 </span></ins><span>元</span>
-
+                                                                <b> &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</b> <b v-text="shop.shops_num"> 0 </b><span> 个</span>
                                                             </span>
+
+
                                                     </div>
                                                 </li>
 
@@ -369,7 +371,6 @@
 <script src="/static/shop/assets/js/fancybox/source/jquery.fancybox.pack.js"></script>
 <script src="/static/shop/assets/js/fancybox/source/helpers/jquery.fancybox-media.js"></script>
 <script src="/static/shop/assets/js/fancybox/source/helpers/jquery.fancybox-thumbs.js"></script>
-{#<script src='http://ditu.google.cn/maps/api/js?key=AIzaSyC3nDHy1dARR-Pa_2jjPCjvsOR4bcILYsM'></script>#}
 <script type="text/javascript" src="/static/shop/assets/js/function.js"></script>
 <script type="text/javascript" src="/static/shop/assets/js/Modernizr.js"></script>
 <script type="text/javascript" src="/static/shop/assets/js/jquery.plugin.js"></script>
