--- a/CarAccessories/CarPartsShop/templates/shop/shop_register.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_register.html
@@ -24,7 +24,7 @@
                             </p>
                             <p class="form-row form-row-wide">
                                 <label>密码<span class="required"></span></label>
-                                <input type="text" value="" name="password"
+                                <input type="password" value="" name="password"
                                        placeholder="请输入密码" class="input-text">
                             </p>
                             <p class="form-row form-row-wide">
