complete shop_detail

--- a/CarAccessories/CarPartsShop/templates/shop/shop_base.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_base.html
@@ -255,6 +255,10 @@
                                     <span class="toggle-submenu hidden-md"></span>
 
                                 </li>
+                                <li>
+                                    <a href="/shop/shop_userinfo/" class="dropdown-toggle">个人中心</a>
+                                    <span class="toggle-submenu hidden-md"></span>
+                                </li>
                                 <li class=" arrow">
                                     <a href="/shop/shop_list/p/1/" >商品列表</a>
                                     <span class="toggle-submenu hidden-md"></span>
