--- a/CarAccessories/CarPartsShop/templates/shop/shop_list.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_list.html
@@ -39,13 +39,13 @@
                                 <div class="product-inner">
                                     <div class="product-thumb">
                                         <div class="thumb-inner">
-                                            <a href="#"><img src="{{ shop.img }}" style="height: 200px"></a>
+                                            <a href="/shop/shop_detail/{{ shop.id }}"><img src="{{ shop.img }}" style="height: 200px"></a>
                                         </div>
                                         <span class="onsale">-50%</span>
                                         <a href="#" class="quick-view">详情</a>
                                     </div>
                                     <div class="product-innfo">
-                                        <div class="product-name"><a href="#">{{ shop.name }}
+                                        <div class="product-name"><a href="/shop/shop_detail/{{ shop.id }}">{{ shop.name }}
                                         </a></div>
                                         <span class="price">
 
