--- a/CarAccessories/CarPartsShop/templates/shop/shop_index.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_index.html
@@ -76,12 +76,12 @@
                                             <div class="product-inner equal-elem">
                                                 <div class="product-thumb">
                                                     <div class="thumb-inner">
-                                                        <a href="#"><img src="{{ j.img }}" alt="f1"></a>
+                                                        <a href="/shop/shop_detail/{{ j.id }}"><img src="{{ j.img }}" alt="f1"></a>
                                                     </div>
 
                                                 </div>
                                                 <div class="product-innfo">
-                                                    <div class="product-name"><a href="#">{{ j.name }}</a>
+                                                    <div class="product-name"><a href="/shop/shop_detail/{{ j.id }}">{{ j.name }}</a>
                                                     </div>
                                                     <span class="price price-dark">
 
