--- a/CarAccessories/CarPartsShop/templates/shop/shop_base.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_base.html
@@ -52,7 +52,7 @@
                             <img src="/static/shop/assets/images/general/China-Flag.png" alt="flag">中国
                     </li>
 
-                    <li><a href="/shop/shop_login"><i class="fa fa-user" aria-hidden="true"></i>注册 / 登录</a></li>
+                    <li><a href="/shop/shop_login"><i class="fa fa-user" aria-hidden="true"></i>登录</a></li>
 
                 </ul><!-- heder links -->
             </div>
@@ -255,10 +255,6 @@
                                     <span class="toggle-submenu hidden-md"></span>
 
                                 </li>
-                                <li>
-                                    <a href="/shop/shop_userinfo/" class="dropdown-toggle">个人中心</a>
-                                    <span class="toggle-submenu hidden-md"></span>
-                                </li>
                                 <li class=" arrow">
                                     <a href="/shop/shop_list/p/1/" >商品列表</a>
                                     <span class="toggle-submenu hidden-md"></span>
@@ -267,6 +263,15 @@
                                 <li class="arrow">
                                     <a href="/news/news_list/" class="dropdown-toggle">新闻</a>
                                     <span class="toggle-submenu hidden-md"></span>
+                                </li>
+                                <li>
+                                    <a href="/shop/shop_userinfo/" class="dropdown-toggle">个人中心</a>
+                                    <span class="toggle-submenu hidden-md"></span>
+                                </li>
+                                <li class=" arrow">
+                                    <a href="/shop/shop_order/" >订单</a>
+                                    <span class="toggle-submenu hidden-md"></span>
+
                                 </li>
 {#                                <li class="menu-item-has-children arrow">#}
 {#                                    <a href="#" class="dropdown-toggle">Sub Menu</a>#}
@@ -286,10 +291,6 @@
 {#                                        </li>#}
 {#                                    </ul>#}
 {#                                </li>#}
-                                <li>
-                                    <a href="contact-us.html" class="dropdown-toggle">联系我们</a>
-                                    <span class="toggle-submenu hidden-md"></span>
-                                </li>
 
                             </ul>
                         </div>
