--- a/CarAccessories/CarPartsShop/templates/shop/shop_login.html
+++ b/CarAccessories/CarPartsShop/templates/shop/shop_login.html
@@ -43,8 +43,9 @@
                             </ul>
                             <a href="#" class="forgot-password">忘记密码?</a>
                             <p class="form-row">
-                                <input type="submit" value="登录" name="register" class="button-submit loginbutton" >
+                                <input type="submit" value="登录" name="register" class="button-submit loginbutton" ><a href="/shop/shop_register/" style="float: right;font-size: 15px" ><i>注册</i></a>
                             </p>
+
                             <p style="color: red">{{ error_message }}</p>
                         </form>
                     </div>
